--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Dashboard</title>
 
     <link rel="stylesheet" type="text/css" href="/loader.css" />
-    <meta name="base_api" content="http://localhost/lms/dashboard_anl_api/" />
+    <!-- <meta name="base_api" content="http://localhost/lms/dashboard_anl_api/" /> -->
+    <meta
+      name="base_api"
+      content="https://boti.education/p/greenwood/dashboard_anl_api/"
+    />
     <meta name="base_path" content="http://localhost/lms/dashboard_anl_api/" />
     <!-- <meta
       name="base_api"
