--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <meta name="base_api" content="http://localhost/lms/dashboard_anl_api/" /> -->
     <meta
       name="base_api"
-      content="https://boti.education/p/gsnejjar/dashboard_anl_api/"
+      content="https://boti.education/p/greenwood/dashboard_anl_api/"
     />
     <meta name="base_path" content="http://localhost/lms/dashboard_anl_api/" />
     <meta name="school" content="https://boti.education/p/fleming/" />
@@ -66,6 +66,4 @@
     </script>
   </body>
 </html>
-<style>
-  
-</style>
+<style></style>
